--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
             <form id="account" method="post" asp-action="Login" asp-controller="Account">
                 <h4>Use o email com que se registou e a palavra passe</h4>
                 <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
+                @*<div asp-validation-summary="All" class="text-danger"></div>*@
                 <div class="form-group row">
                     <label class="col-md-2" asp-for="Email"></label>
                     <div class="col-md-10">
@@ -24,22 +24,26 @@
                     </div>
                 </div>
                 <div class="form-group">
-                <div class="col-md-10 offset-md-2 custom-checkbox">
-                    <label asp-for="RememberMe" class="pr-4 pl-0">
-                        <input asp-for="RememberMe"/>
-                    </label>
-                    Remember Me?
-                </div>
-                <div class="form-group">
-                    <div class="col-md-10 offset-md-2">
-                        <input type="submit" value="Entrar" class="btn btn-success"/>
+                    <div class="col-md-10 offset-md-2 custom-checkbox">
+                        <label asp-for="RememberMe" class="pr-4 pl-0">
+                            <input asp-for="RememberMe" />
+                        </label>
+                        Remember Me?
                     </div>
-                </div>
+                    <div class="form-group">
+                        <div class="col-md-10 offset-md-2">
+                            <input type="submit" value="Entrar" class="btn btn-success" />
+                        </div>
+                    </div>
                     <p class="col-md-10 offset-md-2">
-                        <a asp-action="Register" >Registar</a>
+                        <a asp-action="Register">Registar</a>
                     </p>
                 </div>
             </form>
         </section>
     </div>
 </div>
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
